--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="edu.fci.smartcornea.MainActivity">
+    tools:context="edu.fci.smartcornea.MainCameraActivity">
 
     <org.opencv.android.JavaCameraView
         android:id="@+id/main_activity_surface_view"
