--- a/app/src/main/res/layout/activity_training.xml
+++ b/app/src/main/res/layout/activity_training.xml
@@ -1,22 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="edu.fci.smartcornea.MainCameraActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context=".TrainingActivity">
 
     <org.opencv.android.JavaCameraView
         android:id="@+id/main_activity_surface_view"
         android:layout_width="match_parent"
-        android:layout_height="100dp" />
+        android:layout_height="100dp"
+        />
 
     <RelativeLayout
         android:id="@+id/training_images_layout"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_below="@id/main_activity_surface_view"
         android:background="@drawable/background_border"
-        android:visibility="invisible"
         >
     </RelativeLayout>
 
@@ -26,7 +31,6 @@
         android:layout_height="wrap_content"
         android:text="Train"
         android:layout_below="@id/training_images_layout"
-        android:onClick="trainClicked"
         />
 
     <Button
@@ -36,6 +40,6 @@
         android:text="Capture"
         android:layout_below="@id/training_images_layout"
         android:visibility="invisible"
-        android:onClick="captureClicked"
         />
 </RelativeLayout>
+
