--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,15 +10,16 @@
         android:layout_width="match_parent"
         android:layout_height="100dp" />
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/training_images_layout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_below="@id/main_activity_surface_view"
         android:background="@drawable/background_border"
         android:visibility="invisible"
+        android:orientation="horizontal"
         >
-    </RelativeLayout>
+    </LinearLayout>
 
     <Button
         android:id="@+id/train_button"
