--- a/app/src/main/res/layout/activity_domains.xml
+++ b/app/src/main/res/layout/activity_domains.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="edu.fci.smartcornea.DomainsActivity">
+    tools:context=".activity.DomainsActivity">
 
     <TextView
         android:id="@+id/select_domain_text_view"
